# ailand

./: .gitignore  404.html  Makefile  README.md  github.copilot.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: gh-pages.yml
chapter-01/01-enterprise-setup-env-var/: index.html
chapter-01/02-secure-auth-azure-openai/: index.html
docs/: index.md  secure-authentication.md
docs/chapter-01/: 02-secure-auth-azure-openai.md
notebooks/: aoai-client-example.ipynb  prototype.ipynb
search/: search_index.json
src/ailand/: __init__.py
src/ailand/core/clients/: interfaces.py
src/ailand/core/clients/openai/: chat.py  endpoint_selector.py
src/ailand/utils/: __init__.py  logging.py
src/ailand/utils/auth/: azure_identity.py
src/ailand/utils/clients/ai/: retry.py
src/ailand/utils/clients/ai/openai/: catalog.py
src/ailand/utils/clients/openai/: base.py  chat.py
src/ailand/utils/settings/: base.py  core.py
src/cnlib/: __init__.py
src/cnlib/core/clients/openai/: catalog.py  chat.py
src/cnlib/utils/auth/: azure_identity.py
src/cnlib/utils/settings/: base.py  core.py
