[project]
name = "cnlib"
version = "0.1.0"
description = "Crafting Neurons - Enterprise AI application Development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.101.0",
]

[project.scripts]
cnlib = "cnlib:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.18",
]


# [tool.uv.scripts]
# # Run local docs server
# docs = "mkdocs serve"

# # Build docs into 'site/' directory
# docs-build = "mkdocs build"

# # Deploy docs (GitHub Pages)
# docs-deploy = "mkdocs gh-deploy"