[project]
name = "cnlib"
version = "0.1.0"
description = "Crafting Neurons - Enterprise AI application Development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.24.0",
    "openai>=1.101.0",
    "pydantic-settings>=2.10.1",
    "tenacity>=9.1.2",
]

[project.scripts]
cnlib = "cnlib:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "isort>=6.0.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.18",
]


# [tool.uv.scripts]
# # Run local docs server
# docs = "mkdocs serve"

# # Build docs into 'site/' directory
# docs-build = "mkdocs build"

# # Deploy docs (GitHub Pages)
# docs-deploy = "mkdocs gh-deploy"